<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/semfoto"
                android:id="@+id/formulario_foto" />

            <Button
                android:id="@+id/formulario_botao"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignBottom="@+id/formulario_foto"
                android:layout_alignEnd="@+id/formulario_foto"
                android:layout_alignRight="@+id/formulario_foto"
                android:background="@drawable/fundo_camera"
                android:elevation="12dp" />


        </RelativeLayout>

        <EditText
            android:id="@+id/formulario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/formulario_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco"
            android:inputType="text" />

        <EditText
            android:id="@+id/formulario_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/formulario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/formulario_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/github"
            android:inputType="textUri" />

    </LinearLayout>

</ScrollView>
